# client-gstreamer

./: CMakeLists.txt  README.md  main.cpp  main.qml  mixer.qml  orangepi5b.txt  orangepi5ultra.txt  postprocess.cc  postprocess.h  setplaying.cpp  setplaying.h  videocontroller.cpp  videocontroller.h  videopipeline.cpp  videopipeline.h  videorenderer.cpp  videorenderer.h  yolo11.h
rknpu2/: yolo11.cpp
